<resources>
    <string name="lib_version">MetroKit v%1$s</string>

    <string name="set_style">Style</string>
    <string name="set_lang">Lang</string>
    <string name="choose_scheme">Choose scheme</string>
    <string name="set_zoom">Set zoom</string>
    <string name="export_pdf">Export to PDF</string>
    <string name="update_scheme_list">Update</string>

    <string name="route_time">%1$.2f minutes</string>
    <string name="route_transfer_count">%1$d transfers</string>

    <string name="scheme_id">id: %1$s</string>
    <string name="scheme_version">version: %1$s</string>
    <string name="scheme_tags">tags: [%1$s]</string>
    <string name="scheme_update">Update %1$s</string>
    <string name="scheme_download">Download %1$s</string>

    <string name="bytes">%1$d B</string>
    <string name="kilobytes">%1$d KB</string>
    <string name="megabytes">%1$d MB</string>
    <string name="gigabytes">%1$.2f GB</string>

    <string name="fps_format">%.1f</string>

    <string name="export_pdf_error">Failed to create PDF</string>

    <string name="zoom_dialog_ok">OK</string>
    <string name="zoom_dialog_cancel">Cancel</string>
</resources>
