<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/update_scheme_list"
        android:title="@string/update_scheme_list"
        android:icon="@drawable/ic_cached_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/style"
        android:title="@string/set_lang"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>

    <item
        android:id="@+id/lang"
        android:title="@string/set_lang"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>

    <item
        android:id="@+id/choose_scheme"
        android:title="@string/choose_scheme"
        app:showAsAction="never"/>

    <item
        android:id="@+id/set_zoom"
        android:title="@string/set_zoom"
        app:showAsAction="never"/>

    <item
        android:id="@+id/export_pdf"
        android:title="@string/export_pdf"
        app:showAsAction="never"/>

</menu>
